--- a/language/RU/AncientWisp.txt
+++ b/language/RU/AncientWisp.txt
@@ -2,8 +2,8 @@
 	strings:
 	{
 	"MOFFEIN_ANCIENTWISP_BODY_NAME" : "Древний сгусток",
-	"MOFFEIN_ANCIENTWISP_BODY_SUBTITLE" : "Изгнан и прикован",
-	"MOFFEIN_ANCIENTWISP_BODY_LORE" : "Может ли оно быть архитектором малых сгустков? Возможно, этот древний сгусток — кукловод за огненными масками, которые беспокоят меня до сих пор, или он также является великим дьявольским устройством чего-то большего..?\n\nЖар, исходящий от фиолетового пламени, невероятен. Свирепые столбы молний могут вывести из строя мой скафандр или, что еще хуже, превратить меня в покрытого волдырями трупа. Что подпитывает этих жестоких, пылающих призраков?",
+	"MOFFEIN_ANCIENTWISP_BODY_SUBTITLE" : "Изгнан и скован цепями",
+	"MOFFEIN_ANCIENTWISP_BODY_LORE" : "Может ли эта сущность быть создателем остальных сгустков? Возможно, именно Древний сгусток дёргает за ниточки этих горящих масок, досаждающих меня до сих пор. А может ли оказаться так, что он сам - лишь дьявольский инструмент какой-то высшей силы..?\n\nЖар, исходящий от пурпурных языков пламени, имеет чрезвычайно высокую температуру. Удары молний настолько агрессивны, что вполне могут замкнуть мой костюм или, что очевидно хуже, превратить меня во вздутую шелуху. Что же питает этих жестоких, горящих яростью наваждений?",
 	"UNLOCKABLE_LOG_MOFFEIN_ANCIENTWISP" : "Запись о монстре: Древний сгусток"
 	}
 }
